# catalyst-radar

./: .env.example  .gitignore  BOS_FILTER_NOTES.md  CLAUDE.md  Dockerfile  ENGINE_LOGIC_REFERENCE.md  EXECUTOR_SPEC.md  LICENSE  README.md  deploy-quickref.md  deploy.sh  docker-compose.yml  pyproject.toml
data/: alert_backtest.md  grok_xsearch_cache.json  lookback_4h_compare.md  replay_may10_11.csv  sample_bars.csv  sample_news_archive.json  ultra_research_output copy.txt  ultra_research_prompt.md  ultra_research_report.md
radar/: __init__.py  beta.py  catalysts.py  classifier.py  config.py  direction_adjudicator.py  executor.py  exit_engine.py  fetch_bars.py  fetch_news.py  lighter.py  lighter_exec.py  main.py  predictor.py  ranker.py  replay.py  storage.py  suppression.py  telegram.py  timefmt.py  trade_plan.py  universe.py
scripts/: alert_backtest.py  g0_verify.py  llm_direction_backtest.py  lookback_4h_compare.py  replay_export.py  telegram_smoketest.py  ultra_research.py
tests/: conftest.py  test_classifier.py  test_direction_adjudicator.py  test_executor.py  test_fetch_bars.py  test_fetch_news.py  test_lighter.py  test_main.py  test_predictor.py  test_ranker.py  test_ranker_4h.py  test_replay.py  test_suppression.py  test_telegram.py  test_timefmt.py  test_trade_plan.py
