[project]
name = "catalyst-radar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lighter-sdk @ git+https://github.com/elliottech/lighter-python.git",
    "anthropic==0.40.0",
    "requests==2.32.3",
    "feedparser==6.0.11",
    "yfinance==0.2.50",
    "python-telegram-bot==21.7",
    "python-dotenv==1.0.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pydantic==2.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["radar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
